# vorma

./: .cursorignore  .oxlintrc.json  ARCHITECTURE_DECISIONS.md  DOCS_PROMPT.md  Makefile  README.md  RELEASE_INSTRUCTIONS.md  go.mod  go.sum  package.json  pnpm-lock.yaml  vorma.go
bootstrap/: bootstrap.go
internal/site/: Cargo.toml  go.mod  go.sum  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
internal/site/api/: index_go.txt  proxy.rs  proxy_ts.txt
internal/site/backend/: wave.config.json  wave.dev.go  wave.prod.go
internal/site/backend/assets/: entry.go.html
internal/site/backend/assets/markdown/blog/: vercel-skew-protection.md  write-your-backends-in-go.md
internal/site/backend/assets/markdown/docs/: complete-vorma-reference.md
internal/site/backend/assets/markdown/docs/advanced/: _index.md  third-party-routers.md
internal/site/backend/assets/markdown/reference/: 1.md
internal/site/backend/assets/markdown_unpub/: api-new.md  start.md
internal/site/backend/assets/markdown_unpub/docs/: _index.md  basic.md  vorma.md  wave.md
internal/site/backend/cmd/serve/: main.go
internal/site/backend/src/router/: app.go  core.go  loaders.go  markdown.go  registration_helpers.go
internal/site/frontend/src/: river.utils.tsx  vorma.entry.tsx  vorma.gen.ts  vorma.routes.ts  vorma.utils.tsx
internal/site/frontend/src/components/: app.tsx  dyn.tsx  home.tsx  md.tsx  rendered-markdown.tsx
internal/site/frontend/src/styles/: main.critical.css  main.css
internal/site/frontend/src/vorma.gen/: filemap.json  filemap.ts  index.ts
lab/: README.md
(+317 files in other folders)
